# pfa-decision-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  handoff.md  handoff_after_day20.md  pfa_master_plan.md  pyproject.toml
.github/workflows/: ci.yml
agent_docs/: architecture.md  data_dictionary.md  kpi_catalog.md
api/: .dockerignore  Dockerfile  db.py  llm_client.py  main.py  requirements.txt
api/agents/: decision_analyst.py  tools.py
api/routers/: act.py  ask.py  auth.py  data_health.py  governance.py  health.py  ingest.py  insights.py  kpi.py  (+2 more)
dagster_pipeline/: Dockerfile  __init__.py  assets.py  learn_sensor.py  requirements.txt  schedules.py  sensors.py  workspace.yaml
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
docs/: day16_deploy_runbook.md  demo_defense.md  demo_script.md  model_card.md  one_pager.md
ml/: train_forecast.py  train_late_delivery.py
research/: REPOS_INDEX.md
scripts/: audit_log_migration.sql  governance_actions_and_outcomes_migration.sql  governance_alerts_migration.sql  grant_permissions.sql  init-schemas.sql  load_bronze.py  replay_simulator.py  replay_state_migration.sql  requirements.txt  seed_users.py  setup_local_postgres.sql  source_registry_migration.sql  users_migration.sql
terraform/: .gitignore  README.md  alb.tf  ecs.tf  eventbridge.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.dev.tfvars  variables.tf  vpc.tf
(+75 files in other folders)
