[project]
name = "pfa-decision-ai"
version = "0.1.0"
description = "AI-powered decision support tool for e-commerce marketplace operations (Olist dataset)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "dbt_project/target",
    "dbt_project/dbt_packages",
    "dbt_project/logs",
    "research",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"api/tests/*" = ["F401", "F811"]  # pytest fixtures

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "dbt_project/",
    "research/",
    "ml/",
]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
pythonpath = ["api"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a live Postgres connection",
    "llm: tests that hit a real LLM provider",
]
